# fivem-websocket-test

./: .gitignore  LICENSE.txt  README.md
ITGH_websocket_test_client/: README.md  fxmanifest.lua
ITGH_websocket_test_client/client/: client_main.lua
ITGH_websocket_test_client/nui/: index.html  package-lock.json  package.json  tsconfig.json
ITGH_websocket_test_client/nui/ts/: index.html  index.ts
ITGH_websocket_test_client/server/: server_main.lua
ITGH_websocket_test_client/shared/: shared_config.lua
test_websocket_server/: Cargo.toml  README.md  config.toml
test_websocket_server/src/: main.rs
test_websocket_server/src/config/: mod.rs
test_websocket_server/src/websocket/: handler.rs  mod.rs
